improve streamlit app

--- a/src/promptflow/promptflow/_sdk/data/executable/app.spec.jinja2
+++ b/src/promptflow/promptflow/_sdk/data/executable/app.spec.jinja2
@@ -13,7 +13,7 @@ block_cipher = None
 
 
 a = Analysis(
-    ['app.py', 'main.py'],
+    ['app.py', 'main.py', 'utils.py'],
     pathex=[],
     binaries=[],
     datas=datas,
