--- a/src/promptflow/promptflow/_sdk/data/executable/app.spec.jinja2
+++ b/src/promptflow/promptflow/_sdk/data/executable/app.spec.jinja2
@@ -2,7 +2,7 @@
 from PyInstaller.utils.hooks import collect_data_files
 from PyInstaller.utils.hooks import copy_metadata
 
-datas = [('connections', 'connections'), ('flow', 'flow'), ('settings.json', '.'), ('main.py', '.'), ('{{runtime_interpreter_path}}', './streamlit/runtime')]
+datas = [('connections', 'connections'), ('flow', 'flow'), ('settings.json', '.'), ('logo.png', '.'), ('{{runtime_interpreter_path}}', './streamlit/runtime')]
 datas += collect_data_files('streamlit')
 datas += copy_metadata('streamlit')
 datas += collect_data_files('keyrings.alt', include_py_files=True)
