--- a/scripts/readme/ghactions_driver/workflow_templates/basic_workflow.yml.jinja2
+++ b/scripts/readme/ghactions_driver/workflow_templates/basic_workflow.yml.jinja2
@@ -2,6 +2,10 @@
 {% block steps %}
 runs-on: ubuntu-latest
 steps:
+  - name: Free Disk Space (Ubuntu)
+    uses: jlumbroso/free-disk-space@main
+    with:
+      tool-cache: false
   - name: Checkout repository
     uses: actions/checkout@v3
   - name: Generate config.json
