--- a/src/promptflow/promptflow/_sdk/data/executable/main.py.jinja2
+++ b/src/promptflow/promptflow/_sdk/data/executable/main.py.jinja2
@@ -79,6 +79,18 @@ def start():
         return result
 
     image = Image.open(Path(__file__).parent / "logo.png")
+    st.set_page_config(
+        layout="wide",
+        page_title="Promptflow App",
+        page_icon=image,
+        menu_items={
+            'About': """
+            # This is a Promptflow App.
+
+            You can refer to [promptflow](https://github.com/microsoft/promptflow) for more information.
+            """
+        }
+    )
     st.set_page_config(layout="wide", page_title="Promptflow App", page_icon=image)
     st.config.set_option("theme.primaryColor", "#0F6CBD")
     st.title("{{flow_name}}")
