change doc name and refine
update

update

update

update

--- a/examples/tools/use-cases/custom_llm_tool_showcase/prompt_template.jinja2
+++ b/examples/tools/use-cases/custom_llm_tool_showcase/prompt_template.jinja2
@@ -1,1 +1,6 @@
-This is the prompt for my custom LLM tool.
+Welcome to {{ website_name }}!
+{% if user_name %}
+    Hello, {{ user_name }}!
+{% else %}
+    Hello there!
+{% endif %}
