[Serving] Fix image output to dict, fix provider
Signed-off-by: Brynn Yin <biyi@microsoft.com>

--- a/src/promptflow/promptflow/_sdk/data/executable/main.py.jinja2
+++ b/src/promptflow/promptflow/_sdk/data/executable/main.py.jinja2
@@ -157,7 +157,7 @@ def start():
                 os.chdir(flow)
             else:
                 os.chdir(flow.parent)
-            invoker = FlowInvoker(flow, connection_provider="local", dump_to=dump_path)
+            invoker = FlowInvoker(flow, connection_provider="""{{ connection_provider }}""", dump_to=dump_path)
         result = invoker.invoke(data)
         return result
 
