--- a/src/promptflow-tools/tests/test_configs/prompt_templates/prompt_with_function.jinja2
+++ b/src/promptflow-tools/tests/test_configs/prompt_templates/prompt_with_function.jinja2
@@ -1,18 +1,18 @@
-system:
+# system:
 Don't make assumptions about what values to plug into functions. Ask for clarification if a user request is ambiguous.
 
-user:
+# user:
 {{prev_question}}
 
-assistant:
+# assistant:
 {{prev_answer}}
 
-function:
-name:
+# function:
+## name:
  {{name}}  
 
-content:
+## content:
 {{result}}
 
-user:
+# user:
 {{question}}
