--- a/src/promptflow-tools/tests/test_configs/prompt_templates/prompt_with_name_in_roles.jinja2
+++ b/src/promptflow-tools/tests/test_configs/prompt_templates/prompt_with_name_in_roles.jinja2
@@ -1,30 +1,30 @@
-system:
-name:
+# system:
+## name:
 AI
 
-content:
+## content:
 Don't make assumptions about what values to plug into functions. Ask for clarification if a user request is ambiguous.
 
-user:
-name:
+# user:
+## name:
 person
 
-content:
+## content:
 {{prev_question}}
 
-assistant:
-name:
+# assistant:
+## name:
 John
 
-content:
+## content:
 {{prev_answer}}
 
-function:
-name:
+# function:
+## name:
  {{name}}
 
-content:
+## content:
 {{result}}
 
-user:
+# user:
 {{question}}
