--- a/src/promptflow-tools/tests/test_configs/prompt_templates/prompt_with_name_in_roles.jinja2
+++ b/src/promptflow-tools/tests/test_configs/prompt_templates/prompt_with_name_in_roles.jinja2
@@ -1,15 +1,27 @@
 # system:
+## name:
+AI
+
+## content:
 Don't make assumptions about what values to plug into functions. Ask for clarification if a user request is ambiguous.
 
 # user:
+## name:
+person
+
+## content:
 {{prev_question}}
 
 # assistant:
+## name:
+John
+
+## content:
 {{prev_answer}}
 
 # function:
 ## name:
- {{name}}  
+ {{name}}
 
 ## content:
 {{result}}
