--- a/scripts/readme/ghactions_driver/workflow_templates/basic_workflow.yml.jinja2
+++ b/scripts/readme/ghactions_driver/workflow_templates/basic_workflow.yml.jinja2
@@ -9,7 +9,7 @@ steps:
     run: echo '${{ '{{' }} secrets.TEST_WORKSPACE_CONFIG_JSON_CANARY }}' > ${{ '{{' }} github.workspace }}/examples/config.json
   - name: Generate config.json for production workspace
     if: github.event_name != 'schedule'
-    run: echo '${{ secrets.TEST_WORKSPACE_CONFIG_JSON }}' > ${{ github.workspace }}/examples/config.json
+    run: echo '${{ '{{' }} secrets.TEST_WORKSPACE_CONFIG_JSON }}' > ${{ '{{' }} github.workspace }}/examples/config.json
   - name: Azure Login
     uses: azure/login@v1
     with:
