--- a/scripts/readme/ghactions_driver/workflow_templates/flow_as_function.yml.jinja2
+++ b/scripts/readme/ghactions_driver/workflow_templates/flow_as_function.yml.jinja2
@@ -6,7 +6,7 @@ steps:
     uses: actions/checkout@v3
   - name: Generate config.json for canary workspace (scheduled runs only)
     if: github.event_name == 'schedule'
-    run: echo '${{ '{{' }} secrets.TEST_WORKSPACE_CONFIG_JSON_CANARY }}' > ${{ '{{' }} github.workspace }}/examples/config.json
+    run: echo '${{ secrets.TEST_WORKSPACE_CONFIG_JSON_CANARY }}' > ${{ github.workspace }}/examples/config.json
   - name: Generate config.json for production workspace
     if: github.event_name != 'schedule'
     run: echo '${{ secrets.TEST_WORKSPACE_CONFIG_JSON }}' > ${{ github.workspace }}/examples/config.json
