--- a/scripts/readme/ghactions_driver/workflow_templates/pdf_workflow.yml.jinja2
+++ b/scripts/readme/ghactions_driver/workflow_templates/pdf_workflow.yml.jinja2
@@ -4,8 +4,12 @@ runs-on: ubuntu-latest
 steps:
   - name: Checkout repository
     uses: actions/checkout@v3
-  - name: Generate config.json
-    run: echo '${{ '{{' }} secrets.TEST_WORKSPACE_CONFIG_JSON_CANARY }}' > ${{ '{{' }} github.workspace }}/examples/config.json
+  - name: Generate config.json for canary workspace (scheduled runs only)
+    if: github.event_name == 'schedule'
+    run: echo '${{ secrets.TEST_WORKSPACE_CONFIG_JSON_CANARY }}' > ${{ github.workspace }}/examples/config.json
+  - name: Generate config.json for production workspace
+    if: github.event_name != 'schedule'
+    run: echo '${{ secrets.EXAMPLE_WORKSPACE_CONFIG_JSON_PROD }}' > ${{ github.workspace }}/examples/config.json
   - name: Setup Python 3.9 environment
     uses: actions/setup-python@v4
     with:
